--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(dNetwork)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(dNetwork main.cpp)
+add_compile_options("-fcoroutines")
+
+add_executable(dNetwork main.cpp dServer.cpp dServer.h dClientData.cpp dClientData.h)
