--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,7 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_compile_options("-fcoroutines")
 
-add_executable(dNetwork main.cpp dServer.cpp dServer.h dClientData.cpp dClientData.h)
+add_executable(dNetwork
+        main.cpp
+        dServer.cpp
+        dClientData.cpp)
